fix: skin roller is scalable; knife and glove storage no more stretched

--- a/Design.css
+++ b/Design.css
@@ -11,7 +11,7 @@
     margin-bottom: 30px;
 }
 
-#gun-skins-list{
+#skins-list{
     display: flex;
     gap: 10px;
 }
